--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "angular-resource": "^1.4.0",
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
-    "angular-touch": "^1.4.0"
+    "angular-touch": "^1.4.0",
+    "materialize": "^0.97.8"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
