--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
-    "materialize": "^0.97.8"
+    "materialize": "^0.97.8",
+    "angular-md5": "^0.1.10"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
