--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
     "materialize": "^0.97.8",
-    "angular-md5": "^0.1.10"
+    "angular-md5": "^0.1.10",
+    "angular-bootstrap": "^2.4.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
