--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-touch": "^1.4.0",
     "materialize": "^0.97.8",
     "angular-md5": "^0.1.10",
-    "angular-bootstrap": "^2.4.0"
+    "angular-bootstrap": "^2.4.0",
+    "angular-websql": "^1.0.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
